--- a/src/FTTBlazor/Components/Toast/FTTToast.razor
+++ b/src/FTTBlazor/Components/Toast/FTTToast.razor
@@ -5,7 +5,7 @@
         </i>
     </div>
     <div class="toast-body">
-        <h6>@Heading</h6>
+        <h6 style="margin: 0rem !important;">@Heading</h6>
         <span>@Message</span>
     </div>
 </div>
