--- a/src/FTTBlazor/Pages/About/Crud.razor
+++ b/src/FTTBlazor/Pages/About/Crud.razor
@@ -10,7 +10,7 @@
 
     protected override async Task OnParametersSetAsync()
     {
-        cols.Add(new FTTBlazor.Components.Crud.FTTGridColumn() { FieldName = "Id", FieldDescription = "Jorginho" });
+        cols.Add(new FTTBlazor.Components.Crud.FTTGridColumn() { FieldName = "Id", FieldDescription = "Id" });
         cols.Add(new FTTBlazor.Components.Crud.FTTGridColumn() { FieldName = "Name", FieldDescription = "Nome" });
 
     }
@@ -26,7 +26,7 @@
         <h6>Abaixo uma serie de opções para CRUD e exemplos de como usar.</h6>
     </div>
 
-    <div style="height: 30rem;">
+    <div style="height: 30rem; margin-bottom: -5rem;">
 
         <FTTBlazor.Components.Crud.FTTCrud Interface="Common.PokeAPI.PokemonDTO" Columns="cols" Endpoint="@endpoint" Title="Pokemons">
             <ModalContent>
