Subindo melhoria no css do crud

--- a/src/FTTBlazor/Components/Crud/FTTCrud.razor
+++ b/src/FTTBlazor/Components/Crud/FTTCrud.razor
@@ -156,7 +156,7 @@
                 </tbody>
             </table>
         </div>
-        <div style="text-align:center; cursor:pointer; background-color: var(--brandlineminor); font-weight:700; border:none;" @onclick="@( async e => { curPage = (curPage + 1); await LoadDataAsync(true, true);})">
+        <div style="text-align:center; cursor:pointer; font-weight:700; border:none;" @onclick="@( async e => { curPage = (curPage + 1); await LoadDataAsync(true, true);})">
             <span class="disabled">CLIQUE PARA CARREGAR MAIS ITENS</span>
         </div>
 
