--- a/src/FTTBlazor/Components/Toast/FTTToast.razor
+++ b/src/FTTBlazor/Components/Toast/FTTToast.razor
@@ -1,10 +1,10 @@
-﻿<div class="toast @(IsVisible ? "toast-visible" : null) @BackgroundCssClass">
-    <div class="toast-icon">
+﻿<div class="ftt-blazor-toast @(IsVisible ? "ftt-blazor-toast-visible" : null) @BackgroundCssClass">
+    <div class="ftt-blazor-toast-icon">
         <i class="material-icons" aria-hidden="true">
             @IconCssClass
         </i>
     </div>
-    <div class="toast-body">
+    <div class="ftt-blazor-toast-body">
         <h6 style="margin: 0rem !important;">@Heading</h6>
         <span>@Message</span>
     </div>
