Melhorando o CRUD para ter mais informações de como aplicar

--- a/src/FTTBlazor/Pages/About/Crud.razor
+++ b/src/FTTBlazor/Pages/About/Crud.razor
@@ -37,6 +37,12 @@
     </div>
 
     <div class="mdl-cell--12-col">
+        <h4>FTTEntity</h4>
+        <h6>Interface precisa herdar desse objeto</h6>
+        <img src="../img/about/crud2.png" />
+    </div>
+
+    <div class="mdl-cell--12-col">
         <h4>Usando</h4>
         <h6>Adicionando na pagina</h6>
         <img src="../img/about/crud1.png" />
@@ -46,6 +52,14 @@
         <h4>Codigo usado</h4>
         <h6>Abaixo uma imagem de como implementar o componente no seu sistema</h6>
         <img src="../img/about/crud.png" />
+    </div>
+
+    <div class="mdl-cell--12-col">
+        <h4>Paginando no servidor</h4>
+        <h6>Aplique o QueryString para capturar as variaveis abaixo</h6>
+        <h6><span style="font-weight:bold;">pagesize:</span> Numero de itens no CRUD </h6>
+        <h6><span style="font-weight:bold;">currentpage:</span> Pagina atual</h6>
+        <img src="../img/about/crud3.png" />
     </div>
 
     <div class="mdl-cell--12-col">
