Subindo melhorias no Index.razor e nos logos

--- a/src/FTTBlazor/Pages/Index.razor
+++ b/src/FTTBlazor/Pages/Index.razor
@@ -1,18 +1,33 @@
 ﻿@page "/"
 
-@code{
+@code {
 
 }
 
 <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
-    <p>Nosso projeto tem o intuito apresentar a solução da Microsoft para o WebAssembly chamada Blazor!</p>
-    <p>
+    <div class="mdl-cell mdl-cell--12-col mdl-grid">
+        <h2>Sobre</h2>
+    </div>
+
+    <h6>Nosso projeto tem o intuito apresentar a solução da Microsoft para o WebAssembly chamada Blazor!</h6>
+    <h6>
         Alem disso temos a proposta de agilizar o desenvolvimento com Blazor casando o pardão REST e
         componentes criado por nós para desenvolvimento WEB usando o MaterialDesign como base.
-    </p>
-</div>
+    </h6>
 
-<div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
+    <div class="mdl-cell mdl-cell--12-col mdl-grid">
+        <h2>Orientador</h2>
+    </div>
+    
+    <div class="mdl-cell--3-col">
+    </div>
+    <div class="mdl-cell--6-col">
+        <img src="../img/savino.png" class="img-center" />
+        <p class="text-center">Prof. Doutor Eduardo Savino Gomes</p>
+    </div>    
+    <div class="mdl-cell--3-col">
+    </div>
+    
     <div class="mdl-cell mdl-cell--12-col mdl-grid">
         <h2>Membros</h2>
     </div>
