--- a/src/FTTBlazor/Shared/MainLayout.razor
+++ b/src/FTTBlazor/Shared/MainLayout.razor
@@ -4,17 +4,17 @@
 
 <div class="layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
 
-    <div class="drawer mdl-layout__drawer" style="transform: translateX(0);">
-        <img src="../img/ftt.png" class="img-center" style="width: 90%" />
+    <div class="drawer mdl-layout__drawer" style="transform: translateX(0); background-color: transparent;">
+        <img src="../img/logo.png" class="img-center" style="width: 100%" />
         <NavMenu />
     </div>
 
     <main class="mdl-layout__content mdl-color--grey-100">
         <div class="mdl-grid">
 
-            <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid" style="margin-top: -8px;height: 20rem;">
+           @* <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid" style="margin-top: -8px;height: 20rem;">
                 <img style="width: 95%;height: 19rem;" src="../img/logoMicrosoft2.png" />
-            </div>
+            </div>*@
 
             @Body
         </div>
